improvement styles with sass

--- a/css/sass/index.sass
+++ b/css/sass/index.sass
@@ -1,3 +1,15 @@
+
+@import _particulas.sass
+@import _tabla.sass
+@import _formulario
+@import _responsive.sass
+@import _sss.sass
+@import _redes.sass
+@import _slider.sass
+
+// sass sass/estilos.sass  styles.css
+
+
 *
 	padding: 0
 	margin: 0
@@ -26,11 +38,10 @@ header
 			padding-top: 10px
 			box-sizing: border-box
 	p a
-		color : #fff
+		color: #fff
 		font-size: 40px
 		text-decoration: none
 		font-weight: bold
-
 
 nav
 	width: 70%
@@ -54,8 +65,4 @@ nav
 			font-weight: bold
 			letter-spacing: 1px
 			&:hover
-					color: #444
-@import _particulas.sass
-@import tabla.sass
-@import formulario
-@import responsive.sass
+				color: #444
