--- a/css/sass/_tabla.sass
+++ b/css/sass/_tabla.sass
@@ -14,6 +14,7 @@
 		width: 25%
 		margin-top: 20px
 
+
 		.caja-precio
 			border: 1px solid #5c6552
 			background: #30353c
@@ -52,20 +53,22 @@
 					&:hover
 						background: #777
 
-
-
 .tablaxD
 	float: left
 	width: 25%
 	margin-top: 20px
+	
 
 	.caja-precio
 		border: 1px solid #5c6552
 		background: #30353c
+		transition: 0.4s ease all
+
 	.destacado
 		background-color: #fff
 		box-shadow: 0 0 8px rgba(0,0,0,0.9)
 		z-index: 500
+
 		h4
 			color: #30353c
 			font-size: 30px
@@ -104,4 +107,3 @@
 
 .fa-star
 	color: #30353c
-@import slider.sass
